		
	* 0.8 Major feature enhancements:
		+ added bookmark support.

	* 0.8.1 Major feature enhancement masked as minor number release
		+ added real Microsoft-like $FIftiMain index-based
		global search. The searches are as fast as possible now.
		- removed the 'Case sensitive' checkbox because index
		search can't use it anyway.
		+ added support for 'javascript:fullSize' URLs.
		+ beautified the font dialog a bit.
		+ fixed empty title in the titlebar bug.
		+ refined the synchronization between the contents tree and
		the wxHtmlWindow displayed page.

	* 0.8.2 Bug fixes and improvements: 
		+ added 'find in page' code (wxWindows 2.5.x only).
		+ added 'copy text' code (wxWindows 2.5 only).
		+ added a 'find in page' dialog that hopefully pops up
		on Ctrl-F :) (wxWindows 2.5.x only)
		+ added a popup menu with common options (back, forward,
		copy selection, find in page) that pops up when the user
		right clicks the HTML window.
		+ beautified the tree control and enabled variable sizes
		for the tree items.

	* 0.8.3 Bug fixes:
		+ fixed a relative path bug (i.e. for file paths like
		../directory/file) both for HTML pages and images (had to
		override wxHtmlWindow::OnOpeningURL()).
		+ made the fonts change if necessary so that alternative
		encodings can be used (such as Russian or Chinese).
	
	* 0.8.4 Minor bugfix:
		+ corrected a bug that crashed xchm if the user tried
		to open a .chm file that is not present on disk.

	* 0.8.5 Major bugfixes:
		+ made xCHM properly handle weird charset languages 
		(Russian, Chinese) properly even when xCHM is being linked
		with the GTK2/Unicode version of wxWindows.

	* 0.8.6 Minor bugfixes:
		+ corrected a bug that made xCHM refuse to load pages
		with /absolute/paths.
		+ corrected a bug that made xCHM refuse to load pages
		with ./in/current/dir paths.

	* 0.8.7 Minor feature enhancements:
		+ the contents panel sash position persists between sessions.
		+ decreased the default application font size from 14 to 12.